<resources>
    <string name="app_name">Menu App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="restaurant">Restaurantes</string>
    <string name="category">Cozinhas</string>
    <string name="favorites">Restaurantes Favoritos</string>
    <string name="favorite_food">Pratos Favoritos</string>
    <string name="wizzard">Tutorial</string>
    <string name="exit">Sair</string>

    <!--Home Activity-->
    <string name="welcome_title">Bem Vindo</string>
    <string name="welcome_sign_to_continue">Faça login para continuar.</string>
    <string name="welcome_email_or_username">EMAIL OU NOME DE USUÁRIO</string>
    <string name="welcome_password">SENHA</string>
    <string name="welcome_login_button">ENTRAR</string>
    <string name="welcome_fb_login_button">ENTRAR COM FACEBOOK</string>
    <string name="welcome_forgot_password">ESQUECEU SUA SENHA?</string>
    <string name="welcome_dont_have_account">NÃO TEM CONTA AINDA? CADASTRE-SE.</string>

    <!--Home Activity-->
    <string name="home_categories">Categorias</string>
    <string name="home_places">Restaurantes</string>
    <string name="home_view_all">Ver Todos</string>
    <string name="home_search">Buscar</string>
    <string name="home_toolbar">Bem Vindo, Mateus</string>
    <string name="home_filter">Filtro</string>

    <!--Place Activity-->
    <string name="place_delivery">Entrega</string>
    <string name="place_open_time">Horários</string>
    <string name="place_contact">Contato</string>
    <string name="place_featured">EM DESTAQUE</string>
    <string name="place_menu">MENU</string>


    <!--Item Details Activity-->
    <string name="item_details_extra_title">Acréscimos</string>
    <string name="item_details_extra_obs">Alguma obervação?</string>
    <string name="item_details_extra_hint">Ex: Tirar a cebola, maionese à parte, ponto da carne, etc...</string>
    <string name="item_details_description">DESCRIÇÃO</string>
    <string name="item_details_add_to_order">FAZER PEDIDO</string>

    <!--Profile Activity-->
    <string name="profile_toolbar">Perfil</string>
    <string name="profile_edit">Editar</string>
    <string name="profile_account_credits">Crédito</string>
    <string name="profile_favorite_foods">Pratos Favoritos</string>
    <string name="profile_favorite_restaurants">Restaurantes Favoritos</string>

    <!--Favorite Foods Activity-->
    <string name="fav_food_toolbar">PRATOS FAVORITOS</string>
    <string name="fav_food_title">Pratos Favoritos</string>

    <!--Favorite Restaurants Activity-->
    <string name="fav_place_toolbar">RESTAURANTES FAVORITOS</string>
    <string name="fav_place_title">Restaurantes Favoritos</string>

    <!--Restaurants List Activity-->
    <string name="places_list_toolbar">RESTAURANTES</string>
    <string name="places_list_title">Restaurantes</string>

    <!--Categories List Activity-->
    <string name="categories_list_toolbar">CATEGORIAS</string>
    <string name="categories_list_title">Categorias</string>
    <string name="categories_list_contact">Tem alguma categoria para sugerir? Contate-nos!</string>

    <!--Menu-->
    <string name="menu_home">Início</string>
    <string name="menu_discover">Buscar</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="menu_profile">Perfil</string>

    <!--Ask for food-->
    <string name="ask_for_food_begin">Olá! Gostaria de pedir um</string>
    <string name="ask_for_food_extras">com os adicionais de: </string>

</resources>
